@@ -16,9 +16,12 @@
 
 package org.springframework.osgi.service.importer.support.internal.aop;
 
+import java.util.Comparator;
+
 import org.osgi.framework.Bundle;
 import org.osgi.framework.ServiceReference;
 import org.springframework.osgi.service.importer.ServiceReferenceProxy;
+import org.springframework.osgi.service.importer.support.internal.collection.comparator.ServiceReferenceComparator;
 import org.springframework.util.Assert;
 
 /**
@@ -32,6 +35,8 @@ import org.springframework.util.Assert;
 public class StaticServiceReferenceProxy implements ServiceReferenceProxy {
 
 	private static final int HASH_CODE = StaticServiceReferenceProxy.class.hashCode() * 13;
+
+	private static final Comparator COMPARATOR = new ServiceReferenceComparator();
 
 	private final ServiceReference target;
 
@@ -80,5 +85,9 @@ public class StaticServiceReferenceProxy implements ServiceReferenceProxy {
 
 	public int hashCode() {
 		return HASH_CODE + target.hashCode();
+	}
+
+	public int compareTo(Object other) {
+		return COMPARATOR.compare(target, other);
 	}
 }
